Fix: Added and committed CPU-compatible model .pkl files

--- a/notebooks/render_model.ipynb
+++ b/notebooks/render_model.ipynb
@@ -163,8 +163,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c8bae2fa-2e32-4756-a4b0-59db40ec9499",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔁 Re-saving (Torch) file: ../model/symptom_embeddings.pkl\n",
+      "❌ Failed: ../model/symptom_embeddings.pkl\n",
+      "Invalid magic number; corrupt file?\n",
+      "🔁 Re-saving (Torch) file: ../model/symptom_confidence_scores.pkl\n",
+      "❌ Failed: ../model/symptom_confidence_scores.pkl\n",
+      "Invalid magic number; corrupt file?\n",
+      "🔁 Re-saving (Torch) file: ../model/model_disease_frequency.pkl\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j7/q41jdqbs44549h57hb3nhfv00000gn/T/ipykernel_11788/1237564057.py:13: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  obj = torch.load(f, map_location=\"cpu\")  # ✅ THIS ensures CPU compatibility\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Failed: ../model/model_disease_frequency.pkl\n",
+      "Invalid magic number; corrupt file?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch, pickle\n",
+    "\n",
+    "model_files = [\n",
+    "    \"../model/symptom_embeddings.pkl\",\n",
+    "    \"../model/symptom_confidence_scores.pkl\",\n",
+    "    \"../model/model_disease_frequency.pkl\"\n",
+    "]\n",
+    "\n",
+    "for file_path in model_files:\n",
+    "    print(f\"🔁 Re-saving (Torch) file: {file_path}\")\n",
+    "    try:\n",
+    "        with open(file_path, \"rb\") as f:\n",
+    "            obj = torch.load(f, map_location=\"cpu\")  # ✅ THIS ensures CPU compatibility\n",
+    "\n",
+    "        with open(file_path, \"wb\") as f:\n",
+    "            pickle.dump(obj, f)  # 🔁 Re-save with pickle for FastAPI compatibility\n",
+    "\n",
+    "        print(\"✅ Re-saved for CPU\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Failed: {file_path}\\n{e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8666e2e-d577-4df1-bc9b-61089cfdbe40",
    "metadata": {},
    "outputs": [],
    "source": []
